app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --hero-background: url("/hero-bg.jpg");
  --bg1-background: url("/bg1.jpg");
  --bg2-background: url("/bg2.png");
  --bg3-background: url("/bg3.png");
}

body {
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

html {
  scroll-behavior: smooth;
}

.hero-bg {
  background: var(--hero-background);
}

.hero-bg-overlay {
  background-color: transparent;
  background-image: linear-gradient(180deg, #03160278 0%, #031602 100%);
  opacity: 1;
  width: 100%;
  height: 100%;
}

.bg1 {
  background: var(--bg1-background);
}
.bg2 {
  background: var(--bg2-background) bottom left no-repeat;
  background-size: contain;
}
.bg3 {
  background: var(--bg3-background) bottom right no-repeat;
  background-size: contain;
}

